--- a/templates/UserManagement/Profile/accountSettings.html.twig
+++ b/templates/UserManagement/Profile/accountSettings.html.twig
@@ -1,3 +1,25 @@
-<button id="delete-account-button" class="btn btn-danger save-button">
-  {{ 'myprofile.deleteAccount'|trans({}, 'catroweb') }}
-</button>
+{% extends 'components/fullscreen_modal.html.twig' %}
+{% set modal =
+  {
+    'id': 'account-settings-modal',
+    'title': '' ~ 'myprofile.accountSettings'|trans({}, 'catroweb'),
+    'left_action':
+    {
+      'id': 'account_settings-cancel_action',
+      'icon': 'close',
+      'label': '' ~ 'cancel'|trans({}, 'catroweb'),
+      'dismiss': true
+    }
+  } %}
+{% block content %}
+  <h2>{{ 'myprofile.deleteAccount'|trans({}, 'catroweb') }}</h2>
+  <p><strong>Be aware:</strong>
+    You created 10 projects and have 12 followers.
+    All of your projects will be removed. You won't
+    be able to login anymore and your projects
+    will disappear from all lists.
+    Deleting your profile cannot be undone!</p>
+  <p>Are you sure you want to leave us?</p> {# TODO: Translate text and add variables! #}
+  <button id="btn-delete-account" class="btn btn-danger w-100">{{ "myprofile.deleteAccount"|trans({}, "catroweb") }}
+  </button>
+{% endblock %}
