--- a/templates/UserManagement/Profile/myProfileData.html.twig
+++ b/templates/UserManagement/Profile/myProfileData.html.twig
@@ -1,99 +1,242 @@
-<div class="row">
+{% set additional_header_options %}
+    <button id="top-app-bar__btn-settings" data-bs-toggle="modal" data-bs-target="#studio-admin-settings-modal"
+            class="material-icons mdc-top-app-bar__action-item mdc-icon-button"
+            aria-label="Search">
+        settings
+    </button>
+{% endset %}
 
-  <div class="col-12 mb-2">
-    <div class="row">
-
-      <div class="col-12 col-sm-5 col-md-4 col-lg-3 avatar-container mt-2">
-        {% include 'UserManagement/Profile/avatarEdit.html.twig' %}
-      </div>
-
-      <div class="col-12 col-sm-7 col-md-8 col-lg-9 mt-sm-2">
-
-        <div id="username-wrapper" class="mb-3">
-          <div class="subtitle-1 text-icon-aligned">
-            <span>{{ 'username'|trans({}, 'catroweb') }}</span>
-            <span id="edit-username-button"
-                  data-bs-toggle="tooltip" title="{{ 'myprofile.editUsername'|trans({}, 'catroweb') }}"
-                  class="mdc-icon-button material-icons trailing-icon">edit</span>
-          </div>
-
-          <div id="username-edit-container" class="edit-container">
-            {% include 'UserManagement/Profile/usernameEdit.html.twig' %}
-          </div>
-
-          <div class="profile-data text-icon-aligned">
-            <span class="material-icons me-2">person</span>
-            <div id="username">
-              {{ username }}
-            </div>
-          </div>
+<div class="profile__basic-info">
+    <div class="profile__basic-info__avatar">
+        <img class="profile__basic-info__avatar__img" alt="{{ 'profile.picture' | trans({}, 'catroweb') }}"
+             src="{% if app.user.avatar is not empty %}{{ app.user.avatar }}{% else %}{{ asset('images/default/avatar_default.png') }}{% endif %}"/>
+        <div class="profile__basic-info__avatar__btn-change"
+             aria-label="{{ 'profile.changePicture' | trans({}, 'catroweb') }}"><span
+                    class="material-icons">photo_camera</span></div>
+    </div>
+    <div class="profile__basic-info__text">
+        <div class="profile__basic-info__text__name" aria-label="{{ 'username' | trans({}, 'catroweb') }}">
+            {{ username }}
         </div>
+    </div>
+</div>
+<div class="profile__description">
+    <div class="profile__description__about" aria-label="{{ 'profile.aboutMe' | trans({}, 'catroweb') }}">
+        Hi, my name is Irving and I love developing games with Pocket Code! Check out my newest game: Very cool
+        Game!! {# TODO: change me! #}
+    </div>
+    <div class="profile__description__status">
+        <span class="profile__description__status__label">
+            {{ 'profile.currentlyWorkingOn' | trans({}, 'catroweb') }}:
+        </span>
+        <span class="profile__description__status__content">
+            The next awesome game 3! {# TODO: change me! #}
+        </span>
+    </div>
+</div>
 
-        <hr>
+{% include 'UserManagement/Profile/userSettings.html.twig' %}
+{% include 'UserManagement/Profile/profileSettings.html.twig' %}
+{% include 'UserManagement/Profile/securitySettings.html.twig' %}
+{% include 'UserManagement/Profile/accountSettings.html.twig' %}
 
-        <div id="email-wrapper" class="mt-3 mb-3">
-          <div class="subtitle-1 text-icon-aligned">
-            <span>{{ 'email'|trans({}, 'catroweb') }}</span>
-              <span id="edit-email-button"
-                    data-bs-toggle="tooltip" title="{{ 'myprofile.editEmail'|trans({}, 'catroweb') }}"
-                    class="mdc-icon-button material-icons trailing-icon">edit</span>
-          </div>
 
-          <div id="email-edit-container" class="edit-container">
-            {% include 'UserManagement/Profile/emailEdit.html.twig' %}
-          </div>
+<div class="tab-bar-container mt-3">
+    <div class="mdc-tab-bar" role="tablist">
+        <div class="mdc-tab-scroller">
+            <div class="mdc-tab-scroller__scroll-area" id="scroll-area">
+                <div class="mdc-tab-scroller__scroll-content">
+                    <button class="mdc-tab mdc-tab--active mdc-tab--stacked" role="tab" aria-selected="true" tabindex="0">
+              <span class="mdc-tab__content">
+                <span class="mdc-tab__icon" id="projects-count">{{ program_count }}</span>
+                <span class="mdc-tab__icon-text">{{ "projects"|trans({}, "catroweb") }}</span>
+              </span>
+                        <span class="mdc-tab-indicator mdc-tab-indicator--active">
+                <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+              </span>
+                    </button>
 
-          <div class="profile-data text-icon-aligned">
-            <span class="material-icons me-2">email</span>
-            <div id="first-mail">
-              {{ firstMail }}
+                    <button class="mdc-tab mdc-tab--stacked" id="test" role="tab" aria-selected="false" tabindex="0">
+              <span class="mdc-tab__content">
+                <span class="mdc-tab__icon" id="followers-count">{{ followers_list|length }}</span>
+                <span class="mdc-tab__icon-text">{{ 'follower.followers'|trans({}, 'catroweb') }}</span>
+              </span>
+                        <span class="mdc-tab-indicator">
+                <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+              </span>
+                    </button>
+
+                    <button class="mdc-tab mdc-tab--stacked" role="tab" aria-selected="false" tabindex="0">
+              <span class="mdc-tab__content">
+                <span class="mdc-tab__icon" id="following-count">{{ following_list|length }}</span>
+                <span class="mdc-tab__icon-text">{{ 'follower.follows'|trans({}, 'catroweb') }}</span>
+              </span>
+                        <span class="mdc-tab-indicator">
+                <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+              </span>
+                    </button>
+
+                </div>
             </div>
-          </div>
         </div>
+    </div>
+</div>
 
-        <hr>
-
-          <div id="password-wrapper" class="mt-3 mb-3">
-            <div class="subtitle-1 text-icon-aligned">
-              {% if app.user.oauthUser == false or app.user.oauthPasswordCreated%}
-                <span>{{ 'password'|trans({}, 'catroweb') }}</span>
-              {% else %}
-                <span>{{ 'createNewPassword'|trans({}, 'catroweb') }}</span>
-              {% endif %}
-              <span id="edit-password-button"
-                    data-bs-toggle="tooltip" title="{{ 'myprofile.editPassword'|trans({}, 'catroweb') }}"
-                    class="mdc-icon-button material-icons trailing-icon">edit</span>
+<div class="tab-content mt-4">
+    <div id="projects-section" class="tab-pane fade show active" role="tabpanel" aria-labelledby="projects-tab">
+        <div id="user-programs"
+             data-property="uploaded"
+             data-theme="{{ theme() }}"
+             data-base-url="{{ app.request.getBaseURL() }}"
+             data-user-id="{{ profile.id }}"
+             data-flavor="{{ flavor() }}"
+             data-empty-message="{{ "programs.noPrograms"|trans({}, 'catroweb') }}"
+             class="project-list loading project-list--full">
+            <div class="container">
+                <div class="lazyload projects-spinner-container">
+                    {% include 'components/loading_spinner.html.twig' only %}
+                </div>
+                <div class="lazyload project-list__wrapper">
+                    <div class="lazyload projects-container"></div>
+                </div>
             </div>
-            <div id="password-edit-container" class="edit-container">
-              {% include 'UserManagement/Profile/passwordEdit.html.twig' %}
-            </div>
-
-          <div class="profile-data text-icon-aligned">
-            <span class="material-icons me-2">vpn_key</span>
-            <div id="fake-password">
-              ************
-            </div>
-          </div>
-
         </div>
-
-        <hr>
-
-        <div id="account-settings-wrapper" class="mt-3">
-          <div class="subtitle-1 text-icon-aligned">
-            <span class="material-icons me-2">settings</span>
-            <span>{{ 'accountSettings'|trans({}, 'catroweb') }}</span>
-            <span id="account-settings-button"
-                  data-bs-toggle="tooltip" title="{{ 'myprofile.editAccountSettings'|trans({}, 'catroweb') }}"
-                  class="mdc-icon-button material-icons trailing-icon">edit</span>
-          </div>
-          <div id="account-settings-container" class="edit-container">
-            {% include 'UserManagement/Profile/accountSettings.html.twig' %}
-          </div>
-        </div>
-
-      </div>
     </div>
 
-  </div>
+    <div id="follower-section" class="tab-pane fade" role="tabpanel" aria-labelledby="follower-tab">
+        <div id="no-followers" class="text-center mb-5 {{ followers_list is empty ? 'd-block' : 'd-none' }}">
+            {{ "follower.noOtherFollowers"|trans({}, "catroweb") }}
+        </div>
+
+        <div id="follower-cards" class="row mb-5">
+            {% for followerUser in followers_list %}
+                <div id="followers-{{ followerUser.id }}" class="col-12 single-follower my-3">
+                    {% include 'UserManagement/Followers/follower-item.html.twig' with {'user': followerUser} only %}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
+<div id="following-section" class="tab-pane fade" role="tabpanel" aria-labelledby="follows-tab">
+    <div id="no-following" class="text-center mb-5 {{ following_list is empty ? 'd-block' : 'd-none' }}">
+        {{ "follower.noOtherFollowing"|trans({}, "catroweb") }}
+    </div>
+
+    <div id="following-cards" class="row mb-5">
+        {% for followsUser in following_list %}
+            <div id="following-{{ followsUser.id }}" class="col-12 single-following my-3">
+                {% include 'UserManagement/Followers/follower-item.html.twig' with {'user': followsUser, 'following': true} only %}
+            </div>
+        {% endfor %}
+    </div>
+</div>
+
+{% block javascript %}
+{{ encore_entry_script_tags('profile') }}
+  {{ encore_entry_script_tags('follower_overview') }}
+{% endblock %}
+
+
+<div class="row mt-5">
+
+    <div class="col-12 mb-2">
+        <div class="row">
+
+            <div class="col-12 col-sm-5 col-md-4 col-lg-3 avatar-container mt-2">
+                {% include 'UserManagement/Profile/avatarEdit.html.twig' %}
+            </div>
+
+            <div class="col-12 col-sm-7 col-md-8 col-lg-9 mt-sm-2">
+
+                <div id="username-wrapper" class="mb-3">
+                    <div class="subtitle-1 text-icon-aligned">
+                        <span>{{ 'username'|trans({}, 'catroweb') }}</span>
+                        <span id="edit-username-button"
+                              data-bs-toggle="tooltip" title="{{ 'myprofile.editUsername'|trans({}, 'catroweb') }}"
+                              class="mdc-icon-button material-icons trailing-icon">edit</span>
+                    </div>
+
+                    <div id="username-edit-container" class="edit-container">
+                        {% include 'UserManagement/Profile/usernameEdit.html.twig' %}
+                    </div>
+
+                    <div class="profile-data text-icon-aligned">
+                        <span class="material-icons me-2">person</span>
+                        <div id="username">
+                            {{ username }}
+                        </div>
+                    </div>
+                </div>
+
+                <hr>
+
+                <div id="email-wrapper" class="mt-3 mb-3">
+                    <div class="subtitle-1 text-icon-aligned">
+                        <span>{{ 'email'|trans({}, 'catroweb') }}</span>
+                        <span id="edit-email-button"
+                              data-bs-toggle="tooltip" title="{{ 'myprofile.editEmail'|trans({}, 'catroweb') }}"
+                              class="mdc-icon-button material-icons trailing-icon">edit</span>
+                    </div>
+
+                    <div id="email-edit-container" class="edit-container">
+                        {% include 'UserManagement/Profile/emailEdit.html.twig' %}
+                    </div>
+
+                    <div class="profile-data text-icon-aligned">
+                        <span class="material-icons me-2">email</span>
+                        <div id="first-mail">
+                            {{ firstMail }}
+                        </div>
+                    </div>
+                </div>
+
+                <hr>
+
+                <div id="password-wrapper" class="mt-3 mb-3">
+                    <div class="subtitle-1 text-icon-aligned">
+                        {% if app.user.oauthUser == false or app.user.oauthPasswordCreated %}
+                            <span>{{ 'password'|trans({}, 'catroweb') }}</span>
+                        {% else %}
+                            <span>{{ 'createNewPassword'|trans({}, 'catroweb') }}</span>
+                        {% endif %}
+                        <span id="edit-password-button"
+                              data-bs-toggle="tooltip" title="{{ 'myprofile.editPassword'|trans({}, 'catroweb') }}"
+                              class="mdc-icon-button material-icons trailing-icon">edit</span>
+                    </div>
+                    <div id="password-edit-container" class="edit-container">
+                        {% include 'UserManagement/Profile/passwordEdit.html.twig' %}
+                    </div>
+
+                    <div class="profile-data text-icon-aligned">
+                        <span class="material-icons me-2">vpn_key</span>
+                        <div id="fake-password">
+                            ************
+                        </div>
+                    </div>
+
+                </div>
+
+                <hr>
+
+                <div id="account-settings-wrapper" class="mt-3">
+                    <div class="subtitle-1 text-icon-aligned">
+                        <span class="material-icons me-2">settings</span>
+                        <span>{{ 'accountSettings'|trans({}, 'catroweb') }}</span>
+                        <span id="account-settings-button"
+                              data-bs-toggle="tooltip"
+                              title="{{ 'myprofile.editAccountSettings'|trans({}, 'catroweb') }}"
+                              class="mdc-icon-button material-icons trailing-icon">edit</span>
+                    </div>
+                    <div id="account-settings-container" class="edit-container">
+                        <button id="delete-account-button" class="btn btn-danger save-button">
+                            {{ 'myprofile.deleteAccount'|trans({}, 'catroweb') }}
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
 </div>
