--- a/templates/UserManagement/Profile/myProfile.html.twig
+++ b/templates/UserManagement/Profile/myProfile.html.twig
@@ -2,15 +2,131 @@
 {% block page_title %}{{ "menu.profile"|trans({}, "catroweb") }}{% endblock %}
 
 {% block head %}
-{{ encore_entry_link_tags('my_profile') }}
+  {{ encore_entry_link_tags('my_profile') }}
+  {{ encore_entry_link_tags('follower_overview') }}
 {% endblock %}
 
 {% block body %}
+  <div class="profile__basic-info">
+    <div class="profile__basic-info__avatar">
+      <img class="profile__basic-info__avatar__img" alt="{{ 'profile.picture' | trans({}, 'catroweb') }}"
+           src="{% if app.user.avatar is not empty %}{{ app.user.avatar }}{% else %}{{ asset('images/default/avatar_default.png') }}{% endif %}"/>
+      <div class="profile__basic-info__avatar__btn-change"
+           aria-label="{{ 'profile.changePicture' | trans({}, 'catroweb') }}"><span
+            class="material-icons">photo_camera</span></div>
+    </div>
+    <div class="profile__basic-info__text">
+      <div class="profile__basic-info__text__name" aria-label="{{ 'username' | trans({}, 'catroweb') }}">
+        {{ username }}
+      </div>
+    </div>
+  </div>
+  {% if app.user.about is not empty or app.user.currentlyWorkingOn is not empty %}
+    <div class="profile__description">
+      {% if app.user.about is not empty %}
+        <div class="profile__description__about" aria-label="{{ 'profile.aboutMe' | trans({}, 'catroweb') }}">
+          {{ app.user.about }}
+        </div>
+      {% endif %}
+      {% if app.user.currentlyWorkingOn is not empty %}
+        <div class="profile__description__status">
+        <span class="profile__description__status__label">
+            {{ 'profile.currentlyWorkingOn' | trans({}, 'catroweb') }}:
+        </span>
+          <span class="profile__description__status__content">{{ app.user.currentlyWorkingOn }}</span>
+        </div>
+      {% endif %}
+    </div>
+  {% endif %}
 
-   {%  include 'UserManagement/Profile/myProfileData.html.twig' %}
+  {% include 'UserManagement/Profile/userSettings.html.twig' %}
+  {% include 'UserManagement/Profile/profileSettings.html.twig' %}
+  {% include 'UserManagement/Profile/securitySettings.html.twig' %}
+  {% include 'UserManagement/Profile/accountSettings.html.twig' %}
+
+  <div class="tab-bar-container mt-3">
+    <div class="mdc-tab-bar" role="tablist">
+      <div class="mdc-tab-scroller">
+        <div class="mdc-tab-scroller__scroll-area" id="scroll-area">
+          <div class="mdc-tab-scroller__scroll-content">
+            <button class="mdc-tab mdc-tab--active mdc-tab--stacked" role="tab" aria-selected="true" tabindex="0">
+            <span class="mdc-tab__content">
+              <span class="mdc-tab__icon" id="projects-count">{{ program_count }}</span>
+              <span class="mdc-tab__icon-text">{{ "projects"|trans({}, "catroweb") }}</span>
+            </span>
+              <span class="mdc-tab-indicator mdc-tab-indicator--active">
+              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+            </span>
+            </button>
+
+            <button class="mdc-tab mdc-tab--stacked" id="test" role="tab" aria-selected="false" tabindex="0">
+            <span class="mdc-tab__content">
+              <span class="mdc-tab__icon" id="followers-count">{{ followers_list|length }}</span>
+              <span class="mdc-tab__icon-text">{{ 'follower.followers'|trans({}, 'catroweb') }}</span>
+            </span>
+              <span class="mdc-tab-indicator">
+              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+            </span>
+            </button>
+
+            <button class="mdc-tab mdc-tab--stacked" role="tab" aria-selected="false" tabindex="0">
+            <span class="mdc-tab__content">
+              <span class="mdc-tab__icon" id="following-count">{{ following_list|length }}</span>
+              <span class="mdc-tab__icon-text">{{ 'follower.follows'|trans({}, 'catroweb') }}</span>
+            </span>
+              <span class="mdc-tab-indicator">
+              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+            </span>
+            </button>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="tab-content mt-4">
+    <div id="projects-section" class="tab-pane fade show active" role="tabpanel" aria-labelledby="projects-tab">
+      <div id="own-projects"
+           data-theme="{{ theme() }}"
+           data-base-url="{{ app.request.getBaseURL() }}"
+           data-user-id="{{ profile.id }}"
+           data-flavor="{{ flavor() }}"
+           data-empty-message="{{ "programs.noPrograms"|trans({}, 'catroweb') }}"
+           class="project-list loading">
+        <div class="container">
+          <div class="lazyload projects-spinner-container">
+            {% include 'components/loading_spinner.html.twig' only %}
+          </div>
+          <div class="lazyload project-list__wrapper">
+            <div class="lazyload projects-container"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    {% include 'UserManagement/Followers/followersTabs.twig' %}
+  </div>
+
+  <div class="mdc-menu mdc-menu-surface" id="project-action-menu">
+    <ul class="mdc-list" role="menu" aria-hidden="true" aria-orientation="vertical" tabindex="-1">
+      <li class="mdc-list-item" role="menuitem">
+        <span class="mdc-list-item__ripple"></span>
+        <span class="mdc-list-item__text"
+              data-text-private="{{ 'programs.setPrivateAction'|trans({}, 'catroweb') }}"
+              data-text-public="{{ 'programs.setPublicAction'|trans({}, 'catroweb') }}"></span>
+      </li>
+      <li class="mdc-list-item" role="menuitem">
+        <span class="mdc-list-item__ripple"></span>
+        <span class="mdc-list-item__text">{{ 'programs.deleteAction'|trans({}, 'catroweb') }}</span>
+      </li>
+    </ul>
+  </div>
+
+  {% include 'UserManagement/Profile/myProfileData.html.twig' %} {# TODO: Remove it. #}
 
   <div class="mt-5"></div>
-      <div id="myprofile-programs">
+  <div id="myprofile-programs">
     <h2 class="header mb-0">
       {{ "profile.myPrograms"|trans({}, "catroweb") }}
     </h2>
@@ -52,9 +168,35 @@
     const programDeleteConfirmation = `{{ "programs.deleteConfirmation"|trans({}, "catroweb") }}`;
   </script>
   <script>
-    const uploadAvatarUrl = '{{ path('profile_upload_avatar') }}';
-    const apiUserPrograms = '{{ path('api_user_programs') }}';
-    const userID = '{{ app.user.id }}';
+    const uploadAvatarUrl = '{{ path('profile_upload_avatar') }}'
+    const apiUserPrograms = '{{ path('api_user_programs') }}'
+    const userID = '{{ app.user.id }}'
   </script>
+<script>
+  const myProfileConfiguration = {
+    projectActions:{
+      delete: {
+        confirmationText: `{{ "programs.deleteConfirmation"|trans({}, "catroweb") }}`,
+        url: '{{ path('profile_delete_program') }}'
+      },
+      visibility: {
+        confirmationText: `{{ "programs.changeVisibility"|trans({}, "catroweb") }}`,
+        url: '{{ path('profile_toggle_program_visibility') }}',
+        errorTitle: '{{ "myprofile.notChangeVisibility"|trans({}, "catroweb") }}',
+        errorMessage: '{{ "myprofile.notChangeVisibilityReason"|trans({}, "catroweb") }}'
+      }
+    },
+    userSettings: {
+      deleteAccount: {
+        confirmationText: `{{ "programs.deleteAccountConfirmation"|trans({}, "catroweb") }}`,
+        url: '{{ path('profile_delete_account') }}'
+      }
+    },
+    statusCodes: {
+      ok: '{{ constant('Symfony\\Component\\HttpFoundation\\Response::HTTP_OK') }}'
+    }
+  }
+</script>
   {{ encore_entry_script_tags('my_profile') }}
+  {{ encore_entry_script_tags('follower_overview') }}
 {% endblock %}
