--- a/templates/UserManagement/Profile/profileSettings.html.twig
+++ b/templates/UserManagement/Profile/profileSettings.html.twig
@@ -24,7 +24,7 @@
     {% include 'components/text_field.html.twig' with {
       'text_field':
       {
-        'id': 'username',
+        'id': 'profile-username',
         'label': '' ~ 'username'|trans({}, 'catroweb'),
         'value': username,
         'name': 'username',
@@ -36,7 +36,7 @@
     {% include 'components/text_field.html.twig' with {
       'text_field':
       {
-        'id': 'email',
+        'id': 'profile-email',
         'label': '' ~ 'email'|trans({}, 'catroweb'),
         'value': firstMail,
         'name': 'email',
@@ -48,7 +48,7 @@
     {% include 'components/text_field.html.twig' with {
       'text_field':
       {
-        'id': 'status',
+        'id': 'profile-currentlyWorkingOn',
         'label': '' ~ 'profile.currentlyWorkingOn'|trans({}, 'catroweb'),
         'value': app.user.currentlyWorkingOn,
         'name': 'currentlyWorkingOn',
@@ -56,12 +56,12 @@
         'required': false,
         'tabindex': 3
       }
-    } %} {# TODO: insert variable #}
+    } %}
 
     {% include 'components/text_area.html.twig' with {
       'text_area':
       {
-        'id': 'about',
+        'id': 'profile-about',
         'label': '' ~ 'profile.aboutMe'|trans({}, 'catroweb'),
         'value': app.user.about,
         'name': 'about',
@@ -69,7 +69,7 @@
         'rows': '4',
         'mb': 'mb-4'
       }
-    }%} {# TODO: insert variable #}
+    }%}
 
   </form>
 {% endblock %}
