--- a/templates/Header/header_project_options.html.twig
+++ b/templates/Header/header_project_options.html.twig
@@ -14,6 +14,7 @@
         </span>
     </li>
 
+  {# TODO: Disable Report Program for now. Needs a separate flag in database - a new concept!
   {% if not my_program|default(false) %}
     <li id="top-app-bar__btn-report-project"
         class="btn top-app-bar-btn-options mdc-list-item mdc-ripple-upgraded"
@@ -24,7 +25,7 @@
       </span>
     </li>
   {% endif %}
-
+  #}
   </ul>
 
 {% endif %}
