--- a/assets/styles/custom/profile.scss
+++ b/assets/styles/custom/profile.scss
@@ -352,3 +352,15 @@
     }
   }
 }
+
+.loading-spinner-backdrop {
+  background: rgba(255,255,255,0.7);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
