--- a/assets/styles/custom/program.scss
+++ b/assets/styles/custom/program.scss
@@ -699,3 +699,27 @@ input[type="number"] {
     justify-content: flex-end;
   }
 }
+
+.upload-project-image {
+  position: absolute;
+  right: -20px;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  background-color: rgba(0 0 0 / 40%);
+  border-radius: 50%;
+
+  .button-show-ajax {
+    margin: 0 auto;
+  }
+
+  input {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    cursor: pointer;
+    opacity: 0.001;
+  }
+}
