--- a/assets/styles/custom/profile.scss
+++ b/assets/styles/custom/profile.scss
@@ -29,66 +29,12 @@
   }
 }
 
-.header {
-  width: 100%;
-}
-
-// My Programs
-
-.program {
-  height: 160px !important;
-}
-
-.img-delete {
-  position: relative;
-  top: -23px;
-  left: 30px;
-  width: 30px !important;
-  height: 0 !important; // else the layout gets destroyed
-  margin-top: -25px;
-  text-align: center;
-  cursor: pointer;
-
-  i {
-    padding: 0;
-    margin: 0;
-    font-size: 2em;
-    background-color: custom-alpha($white, 90%);
-    border-radius: 50%;
-  }
-}
-
 .button-container {
   align-self: flex-end;
   text-align: right;
 
   button {
     margin-bottom: 0.2em;
-  }
-}
-
-.img-lock,
-.img-lock-open {
-  position: relative;
-  top: 30px;
-  left: 25px;
-  width: 22px !important;
-  height: 0 !important; // else the layout gets destroyed
-  text-align: center;
-  cursor: pointer;
-
-  i {
-    padding: 0.5em;
-    margin: 0;
-    font-size: 1em;
-    color: custom-alpha($white, 90%) !important;
-    background-color: var(--primary);
-    border-radius: 50%;
-
-    &:hover {
-      color: var(--primary) !important;
-      background-color: custom-darken(--color-primary, 10);
-    }
   }
 }
 
@@ -122,7 +68,7 @@
   border-radius: 100%;
 }
 
-.profile {
+#user-information {
   .button-container button {
     min-width: 150px;
 
@@ -146,7 +92,6 @@
 .mdc-select:not(.mdc-select--disabled).mdc-select--focused .mdc-floating-label {
   color: var(--mdc-theme-primary);
 }
-
 
 /* NEW MY PROFILE PAGE */
 .profile {
@@ -174,17 +119,17 @@
       &__btn-change {
         position: absolute;
         top: calc(8rem - 3rem);
+
         @include media-breakpoint-up(lg) {
           top: calc(12rem - 3rem);
         }
-        right: 0;
 
+        right: 0;
         width: 3rem;
         height: 3rem;
-        background-color: rgba(0, 0, 0, 0.4);
+        background-color: rgb(0 0 0 / 40%);
         color: white;
         border-radius: 100%;
-
         display: flex;
         align-items: center;
         justify-content: center;
@@ -194,7 +139,8 @@
     &__text {
       &__name {
         font-size: 2rem;
-        @include force-word-break();
+
+        @include force-word-break;
       }
     }
   }
@@ -244,8 +190,8 @@
 
     .link-text {
       @include force-word-break;
-      font-size: 1.3rem;
 
+      font-size: 1.3rem;
       flex-grow: 1;
       overflow: hidden;
     }
@@ -253,7 +199,7 @@
 }
 
 .loading-spinner-backdrop {
-  background: rgba(255,255,255,0.7);
+  background: rgb(255 255 255 / 70%);
   position: absolute;
   top: 0;
   left: 0;
