--- a/templates/Program/program.html.twig
+++ b/templates/Program/program.html.twig
@@ -206,7 +206,6 @@
        data-theme="{{ theme() }}"
        data-flavor="{{ flavor() }}"
        data-base-url="{{ app.request.getBaseURL() }}"
-       data-path-change-image="{{ path('upload_project_thumbnail', { 'id': program.id }) }}"
        data-project-name="{{ program.name }}"
        data-user-role="{% if app.user %}user{% else %}guest{% endif %}"
        data-my-program="{% if my_program %}true{% else %}false{% endif %}"
@@ -302,5 +301,15 @@
 {% endblock %}
 
 {% block javascript %}
+<script>
+  const projectConfiguration = {
+    id: '{{ program_details.id }}',
+    messages: {
+      forbidden: '{{ 'api.updateProject.forbidden'|trans({}, 'catroweb') }}',
+      notFound: '{{ 'api.updateProject.notFound'|trans({}, 'catroweb') }}',
+      screenshotInvalid: '{{ 'api.project.screenshotInvalid'|trans({}, 'catroweb') }}',
+    }
+  }
+</script>
   {{ encore_entry_script_tags('project') }}
 {% endblock %}
