--- a/templates/Search/search.html.twig
+++ b/templates/Search/search.html.twig
@@ -93,8 +93,8 @@
        data-theme="{{ theme() }}"
        data-flavor="{{ flavor() }}"
        data-base-url="{{ app.request.getBaseURL() }}"
-       data-project-category="{{ 'search' }}"
-       data-project-property="{{ 'uploaded' }}"
+       data-project-category="search"
+       data-project-property="uploaded"
        data-project-translated="{{ 'projects'|trans({}, 'catroweb') }}"
        data-no-users="{{ 'search.noUsers'|trans({}, 'catroweb') }}"
        data-no-projects="{{ 'search.noProjects'|trans({}, 'catroweb') }}"
